# gi

./: .gitignore  README.md  types.md
docs/musings/: context.md  ddl.md  program.md  syntax.md  types.md
lib/core/: Makefile.am  configure.ac
lib/core/src/: Makefile.am  bool.c  core.c  functions.h  logic.c
vm/: .gitignore  Cargo.toml  check  configure.ac  fibonacci.gs  makefile  test.rs  vm.rs
vm/src/: ArgumentList.C  ArgumentList.H  ArgumentSpecification.C  ArgumentSpecification.H  Array.C  Array.H  Class.C  Class.H  Engine.C  Engine.H  Exception.C  Exception.H  File.C  File.H  Function.C  Function.H  Gi.H  Integer.C  Integer.H  Makefile.am  Nil.H  Object.C  Object.H  OrderedKeyValueStore.C  OrderedKeyValueStore.H  Scope.H  String.C  String.H  ast.rs  debugger.c  debugger.h  engine.c  engine.h  engine.rs  engine_instructions.c  engine_instructions.h  environment.rs  eval.rs  functions.rs  gi.h  (+19 more)
vm/src/instructions/: define_function.c  require.c
vm/src/lib/io/: mod.rs
vm/src/lib/math/: mod.rs
vm/tests/: Makefile.am  add-test.gi  add_test.gi  add_test.rs  atom_test.rs  check_engine.c  check_stack.c  check_symbol_map.c  check_symbol_table.c  cond_false.gi  cond_true.gi  control_tests.rs  def_test.rs  div_two_small_ints.gi  fibonacci_test.rs  first.gi  first_test.rs  lambda_test.rs  logic_tests.rs  math.rs  math_test.rs  mul_two_small_ints.gi  quote_test.rs  rest.gi  sequences_test.rs  test.c
vm/tests/support/: mod.rs
