TESTS = check_gi
check_PROGRAMS = check_gi
check_gi_SOURCES = test.c check_symbol_table.c check_engine.c $(top_builddir)/src/engine.h $(top_builddir)/src/engine.c $(top_builddir)/src/engine_instructions.h $(top_builddir)/src/engine_instructions.c $(top_builddir)/src/symbol_table.h $(top_builddir)/src/symbol_table.c
check_gi_CFLAGS = @CHECK_CFLAGS@
check_gi_LDADD = @CHECK_LIBS@
